Made Pixmap copying use Unsafe